# chat_app

./: Cargo.toml  README.md
chat_client/: Cargo.toml
chat_client/src/: main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
lib/: Cargo.toml
lib/src/: Config.json  lib.rs
